# ftag2

./: CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
cfg/: CamTestbench.cfg  FTag2Reader.cfg  FTag2Tracker.cfg  FreqTestbench.cfg
include/common/: BaseCV.hpp  CircularStatistics.hpp  FTag2.hpp  FTag2Marker.hpp  FTag2Payload.hpp  FTag2Pose.hpp  GNUPlot.hpp  Profiler.hpp  Runnable.hpp  VectorAndCircularMath.hpp
include/decoder/: FTag2Decoder.hpp
include/detector/: FTag2Detector.hpp
include/kalman/: ekfilter.hpp
include/tracker/: EKF.hpp  FTag2Tracker.hpp  Kalman.hpp  KalmanTrack.hpp  MarkerFilter.hpp  ObjectHypothesis.hpp  ParticleFilter.hpp  PayloadFilter.hpp  utils.hpp
launch/: debug_test.launch  freq_test.launch  ftag2.launch  ftag2_husky_follower.launch  no_openCV_ftag2.launch  nodelet.launch  reader_nodelet.launch  reader_nodelet_6222.launch  reader_nodelet_6533322.launch  tracker_nodelet.launch
msg/: ARMarkersFT.msg  FreqTBMarkerInfo.msg  FreqTBPhaseStats.msg  TagDetection.msg  TagDetections.msg
src/: cam_testbench.cpp  freq_testbench.cpp  ftag2_reader_nodelet.cpp  ftag2_tracker_nodelet.cpp  ros_cam_testbench.cpp
src/common/: BaseCV.cpp  CircularStatistics.cpp  FTag2.cpp  FTag2Marker.cpp  FTag2Payload.cpp  GNUPlot.cpp  SerializationWrapper.cpp  Timer.cpp  VectorAndCircularMath.cpp
src/decoder/: FTag2Decoder.cpp
src/detector/: FTag2Detector.cpp  LineDetector.cpp  LineDetectorCC.cpp  LineDetectorHough.cpp  OpenCVCanny.cpp  QuadDetector.cpp
src/kalman/: EKF.cpp  KalmanTrack.cpp
src/tracker/: FTag2Tracker.cpp  Kalman.cpp  MarkerFilter.cpp  ObjectHypothesis.cpp  ParticleFilter.cpp  PayloadFilter.cpp  utils.cpp
