<?xml version="1.0"?>
<package>
  <name>ftag2</name>
  <version>0.0.1</version>
  <description>Fourier Tag v2: Spacial-Temporally Graceful Degradable Fiducial Markers</description>

  <maintainer email="davidcp@cim.mcgill.ca">David Cortes</maintainer>
  <maintainer email="anqixu@cim.mcgill.ca">Anqi Xu</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ftag2</url>

  <author email="davidcp@cim.mcgill.ca">David Cortes</author>
  <author email="anqixu@cim.mcgill.ca">Anqi Xu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_geometry</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_geometry</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
